--- a/app.json
+++ b/app.json
@@ -9,29 +9,49 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#6F56BF"
     },
+
     "assetBundlePatterns": [
       "**/*"
     ],
+
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "splash": {
+        "image": "./assets/splash.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#6F41D8"
+      }
     },
+
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.urshop.admin"
+      "package": "com.urshop.admin",
+      "splash": {
+        "image": "./assets/splash.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#6F56BF"
+      }
     },
+
     "web": {
       "favicon": "./assets/favicon.png"
     },
+
     "extra": {
       "apiBaseUrl": "http://192.168.1.11:3001/api/v1",
       "eas": {
         "projectId": "54c90fa8-6d73-4e1f-9f27-307d34d52312"
       }
-    }
+    },
+
+    "plugins": [
+      "expo-font",
+      "expo-secure-store"
+    ]
   }
 }
