--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,14 +19,16 @@
     "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
-    "expo": "^54.0.0",
+    "expo": "~54.0.27",
     "expo-async-storage": "^0.0.0",
-    "expo-dev-client": "~6.0.18",
-    "expo-image": "~3.0.10",
-    "expo-image-picker": "~17.0.8",
-    "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "^31.0.10",
-    "expo-status-bar": "~3.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
